Rimosso metodo deprecato